@@ -1,3 +1,7 @@
+2007-03-15  Jonathan Chambers  <joncham@gmail.com>
+
+	* winconfig.h: Don't use MONO_XEN_OPT on windows.
+	
 2007-03-14  Marek Habersack  <mhabersack@novell.com>
 
 	* data/net_2_0/machine.config: add two missing section handlers.
